syntax = "proto3";

package pb;

option go_package="./pb";
// The greeting service definition.
service Storage {
  // Sends a greeting
  rpc Upload (UploadRequest) returns (UploadReply) {}
  rpc Manage (ManageRequest) returns (ManageReply) {}
  rpc Download (DownloadRequest) returns (DownloadReply) {}
  rpc Sync (SyncRequest) returns (SyncReply) {}
}

message SyncRequest {
  string sessionId = 1;
  string fid = 2;
  repeated string md5s = 3;
  repeated string target = 4;
}
message SyncReply {
  string msg = 1;
}
message DownloadRequest {
  string fid = 1;
  string md5 = 2;
  int64 size = 3;
}

message DownloadReply {
  bytes content = 1;
}

message FileMeta {
  int64 size = 1;
  string name = 2;
  string format = 3;
  int64 ModTime = 4;
  string md5 = 5;
}

message File {
    string fileName =1;
    int64 size = 2;
    bytes content =3;

}
message UploadRequest{
    string fid = 1;
    string md5 = 2;
    bytes rawData = 3;
}

message UploadReply{
  int32 code = 1;
  string md5 = 2;
    // bytes link= 1;
}

message ManageRequest{
    string md5 = 1;
    string method = 2;
}

message ManageReply{

}